tests/snapshots/tiebreak__tiebreak_pathname.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  baz/foo                                                                       "
"  foo/bar                                                                       "
"> foo                                                                           "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
