tests/snapshots/tiebreak__tiebreak_pathname@001.snap
---
source: tests/tiebreak.rs
description: "input: items [\"foo/bar\", \"baz/foo\", \"foo\"]\noptions: --tiebreak=pathname,score"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  baz/foo                                                                       "
"  foo/bar                                                                       "
"> foo                                                                           "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
