tests/snapshots/tiebreak__tiebreak_pathname@002.snap
---
source: tests/tiebreak.rs
description: "input: items [\"foo/bar\", \"baz/foo\", \"foo\"]\noptions: --tiebreak=pathname,score\nafter:\n  @type \"foo\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo/bar                                                                       "
"  foo                                                                           "
"> baz/foo                                                                       "
"  3/3                                                                        0/0"
"> foo                                                                           "
cursor: (24, 6)
